<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playBtn"
        android:text="@string/play" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/howToBtn"
        android:text="@string/howto" />

    <Button
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsBtn" />

    <Button
        android:text="@string/highscores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Highscores" />

    <Button
android:text="@string/about_us"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:id="@+id/aboutBtn" />
</LinearLayout>