<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.firdhan.wakkenenijsberen.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/playBtn"
        android:background="@drawable/custom_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:layout_marginBottom="25dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:text="@string/play" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/howToBtn"
        android:background="@drawable/custom_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:text="@string/howto" />

    <Button
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/settingsBtn"
        android:background="@drawable/custom_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:textSize="30sp"/>

    <Button
        android:text="@string/highscores"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/highscoresBtn"
        android:background="@drawable/custom_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:textSize="30sp"/>

</LinearLayout>
